added html css and gif files

--- a/Animations/davidbru/index.html
+++ b/Animations/davidbru/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Round and Round by @davidbru</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet  " href="style.css">
+    <title>Bounce Ball</title>
 </head>
-
 <body>
-<div id="roundAndRound">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-</div>
+
+    <div class="wrapper">
+        <div class="ball"></div> 
+        <div class="shadow">     
+        </div>
+    </div>
 </body>
 </html>
