--- a/Heart Animation/index.html
+++ b/Heart Animation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>Heacktoberfest-2022</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
