--- a/Abstract Loading/index.html
+++ b/Abstract Loading/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Document</title>
+    <title>Documentss</title>
   </head>
   <body>
     <div id="big-div">
