Added Typing Animation

--- a/Typing-Animation/index.html
+++ b/Typing-Animation/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="index.css">
 <body>
     <div class="text-typing">
-        <p>Welcome to portfolio&nbsp;</p>
+        <p>Welcome to the Animation&nbsp;</p>
     </div>
 </body>
 </html>
